--- a/css/carouselstyle.css
+++ b/css/carouselstyle.css
@@ -4,10 +4,14 @@
     margin: 0;
 }
 
+body {
+    background: #fff8b1
+}
+
 .gallery {
     margin-top: 100px;
     padding: 10px;
-    background-color: #EEE;
+    background-color: #ffe884;
 }
 
 .gallery-cell {
@@ -15,14 +19,17 @@
     height: 500px;
     overflow: hidden;
     padding: 0 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .cellcontent {
-    width: 100%;
+    width: 90%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(#DDD 50%, #AAA);
+    background: linear-gradient(#ff7777 50%, #ff4e4e);
+    color: white;
     border-radius: 15px;
     overflow: hidden;
 }
@@ -38,6 +45,7 @@
     position: absolute;
     padding: 10px 10px;
     border-bottom-right-radius: 5px;
+    border-top-left-radius: 15px;
     font-size: 20px;
     font-weight: lighter;
     background: #FFFFFF88;
@@ -54,6 +62,11 @@
     object-position: center;
     width: 100%;
     height: 100%;
+    transition: object-position 1s ease-in-out; 
+}
+
+.imageholder:hover img {
+    animation: Inspect 12s infinite ease-in-out;
 }
 
 p {
@@ -61,4 +74,19 @@ p {
     height: auto;
     padding: 15px 15px;
     font-size: 30px;
+}
+
+@keyframes Inspect {
+    0% {
+      object-position: center;
+    }
+    25% {
+        object-position: bottom;
+    }
+    75% {
+        object-position: top;
+    }
+    100% {
+        object-position: center;
+    }
 }
